syntax = "proto3";

package com.example.grpc.movie.name;

message StringMessage {
  string string = 1;
}

message LongMessage {
  int64 long = 1;
}

service MovieNameService{
  rpc saveMovie(StringMessage) returns (LongMessage);
  rpc getMovieId(StringMessage) returns (LongMessage);
  rpc getMovieById(LongMessage) returns (StringMessage);
}